feat: generate client
