# product-api/handlers/get.go
@@ -15,6 +15,8 @@ import (
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
 
+	rw.Header().Add("Content-Type", "application/json")
+
 	prods := data.GetProducts()
 
 	err := prods.ToJSON(rw)
@@ -24,14 +26,14 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //   200: productResponse
 //   404: errorResponse
 
-// ListSingle handles GET requests
-func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
+// ListSingleProduct handles GET requests
+func (p *Products) ListSingleProduct(rw http.ResponseWriter, r *http.Request) {
 	id := getProductID(r)
 
 	p.l.Println("[DEBUG] get record id", id)
